Fix a minor overlapping issue with SelectedCompare close icon

--- a/src/components/pages/Shared/SelectedCompare.module.scss
+++ b/src/components/pages/Shared/SelectedCompare.module.scss
@@ -71,8 +71,8 @@
     }
     button {
       position: absolute;
-      top: -0.4em;
-      right: -0.4em;
+      top: -0.3em;
+      right: -0.3em;
       display: inline;
       background-color: transparent;
       border: none;
